  will go back to the form with the search parameters still present.

* Modified checksetup.pl so that the module dependencies are checked
  before compiling Codestriker, so that meaningful error messages
  about missing modules are reported.

* Added a filename checkbox to the search form, so reviews can be
  retrieved which contain a certain filename.

* Addressed some LXR highlighting issues when the identifier names
  clash with HTML entity names.

Version 1.7.2

* Modified so that Codestriker can run on a Windows box with a local
  CVS repository.  See the README file for installation details.
  The LXR::Run module is now used for increased portability and
  reliability under mod_perl.

* Codestriker has been modified slightly to support mod_perl under
  Apache 2.X.  See the README file for more information.  To support
  Apache 2.X, cgi-bin/codestriker.pl is now auto-generated by the
  checksetup.pl script and is no longer included in the distribution.

* Accepted patch from Wesley Smith <wesleysmith@users.sourceforge.net>
  which replaces CGI::escapeHTML with HTML::Entities::encode.  Some
  versions of CGI::escapeHTML seem to misbehave.

* Accepted patch from Wesley Smith <wesleysmith@users.sourceforge.net>
  to indicate that the topic filename needs to be re-entered if there
  is an input-field validation problem in the create topic screen and
  a topic text file was specified.

* Fixed out-of-date help message for the "Topic text upload" field
  reported by Darryl Okahata <darrylo@soco.agilent.com>.

* Implemented suggestion by Darryl Okahata <darrylo@soco.agilent.com>,
  where repositories can be optionally mapped to different LXR
  databases, rather than just specifying a single LXR database (as was
  the case with previous versions).

  This is a minor codestriker.conf syntax change that needs to be
  addressed for all upgrades.  The old $lxr_db, $lxr_user,
  $lxr_password and $lxr_idlookup_base_url variables have now been